tests/neg-custom-args/captures/class-level-attack.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-level-attack.scala:17:33 ---------------------------
17 |  update def set(x: IO^) = r.put(x)  // error
   |                                 ^
   |                                 Found:    IO^{x}
   |                                 Required: IO^
   |
   |                                 Note that capability x is not included in capture set {cap}
   |                                 because (x : IO^²) in method set is not visible from cap in value r.
   |
   |                                 where:    ^ and cap refer to a root capability in the type of value r
   |                                           ^²        refers to a root capability in the type of parameter x
   |
   | longer explanation available when compiling with `-explain`
